# telemetrix-nano-2040-wifi

./: 404.html  README.md  index.html  mkdocs.yml  pypi_desc.md  pyproject.toml  setup.py
about/: index.html
api/: index.html
arduino_ide/: index.html
callback/: index.html
debug/: index.html
docs/: about.md  api.md  arduino_ide.md  callback.md  debug.md  index.md  install_telemetrix.md  pins.md  python3.md  server.md
examples/: analog_input.py  blink.py  dht.py  digital_input_pullup.py  fade.py  hc_sr04.py  i2c_adxl345_accelerometer.py  imu.py  loop_back.py  microphone.py  neopixel_fireworks.py  rgb_blink.py  rgb_fade.py  servo.py  spi_mpu9250.py
extend/: index.html
html/tmx_nano2040_wifi/: index.html
images/: cover.odg
install_telemetrix/: index.html
license/: index.html
pins/: index.html
python3/: index.html
search/: search_index.json
server/: index.html
tmx_nano2040_wifi/: private_constants.py  tmx_nano2040_wifi.py
